--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,14 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
     implementation "org.koin:koin-core:2.1.5"
     implementation "org.jire.arrowhead:arrowhead:1.3.3"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "net.java.dev.jna:jna-platform:5.5.0"
+
 }
 
 compileKotlin {
